# PnP_digest

./: .gitignore  AGENTS.md  README.md  pyproject.toml
data/dictionaries/: cis_allow_keywords.txt  cis_classification_rules.toml  cis_deny_keywords.txt  cis_domain_profile.toml
data/review_templates/: review_checklist.json
data/sample_inputs/: cis_weekly_fixture.json  phase1_relevance_normalized_fixture.json  phase2_patent_verification_manual_fixture.json  phase2_patent_verification_mock_fixture.json  phase2_patent_verify_normalized_fixture.json
data/sample_outputs/: phase0_expected_normalized_manifest.json
docs/: architecture.md
docs/operations/: phase0.md
docs/schemas/: DocumentRecord.schema.json  ExplainArtifact.schema.json  FigureAsset.schema.json  IngestArtifact.schema.json  ManualReviewManifest.schema.json  NormalizedArtifact.schema.json  OpsClosureReport.schema.json  OpsClosureResolutionArtifact.schema.json  OpsEscalationManifest.schema.json  OpsEscalationResolutionArtifact.schema.json  OpsFollowupManifest.schema.json  OpsFollowupResolutionArtifact.schema.json  OpsHandoffArtifact.schema.json  OpsHandoffResolutionArtifact.schema.json  OutputBundle.schema.json  PipelineRun.schema.json  PublishArtifact.schema.json  PublishRetryManifest.schema.json  PublishReviewResolutionArtifact.schema.json  README.md  RawSourceRecord.schema.json  ReleaseManifest.schema.json  ReleaseReviewResolutionArtifact.schema.json  RelevanceArtifact.schema.json  RelevanceAssessment.schema.json  RenderArtifact.schema.json  ReviewTask.schema.json  (+7 more)
pnp_digest/: __init__.py
(+89 files in other folders)
